# Vertical-2D-Lidar-Mapping

./: CMakeLists.txt  package.xml
launch/: 20011025.launch
robots/: pioneer3at_body.xacro
src/: KeyboardController.py  mapping.cpp  mappingTrial.cpp  trial.py
worlds/: 20011025.world  20011025_2.world  robocup_rescue_path1.world  robocup_rescue_path2.world
